apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__directive_arg_spacing@bridge.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: bridge_result
---
result:
  statsReportKey: "# -\n{basicResponseQuery{id@withArgs(arg1:\"\")id}}"
  referencedFieldsByType:
    BasicResponse:
      fieldNames:
        - id
      isInterface: false
    Query:
      fieldNames:
        - basicResponseQuery
      isInterface: false
