apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__enums_from_response_deduplicated_fragments.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: "&generated"
---
SomeEnum:
  - SOME_VALUE_3
